Jos samo search

--- a/movie-db/src/components/ui/Card.module.less
+++ b/movie-db/src/components/ui/Card.module.less
@@ -1,5 +1,6 @@
 .text {
   text-decoration: none;
+  text-transform: uppercase;
 }
 
 .card {
@@ -8,5 +9,9 @@
   box-shadow: 6px 5px 10px 0px rgba(0, 0, 0, 0.75);
   padding: 1.5em 2.5em;
   border-radius: 0.85em;
-  margin-top: 10%;
+  margin: 10%;
+
+  h5 {
+    text-transform: capitalize;
+  }
 }
